feat(register): add teacher contact fields and role support for self-registration; update registration logic and constraints